# CPP20_simple_tcp

./: .gitignore  Awaitable.h  Buffer.h  CMakeLists.txt  Connection.h  IOUring.h  IoUringScheduler.h  Promise.h  README.md  Socket.h  TCPServer.h  Task.h  benchmark.py  io_context.h  io_task.h  main.cpp  test_coroutine_echo.py  utils.h
common/: Buffer.h  Socket.h
coroutine_echo/: Awaitable.h  BufferOperations.h  CMakeLists.txt  Connection.h  IoUringSchedulerAdapter.h  TCPServer.h  main.cpp  perf_test.sh  valgrind_test.sh
detail/: ComputeContext.h  IOContext.h  IO_Awaiter.h  ThreadlocalContext.h  spsc.h
epoll_echo/: Acceptor.h  Buffer.h  CMakeLists.txt  Channel.cpp  Channel.h  Connection.h  EPoller.cpp  EPoller.h  EventLoop.cpp  EventLoop.h  TCPServer.h  main.cpp  perf_test.sh
libcoro/include/: IoUringScheduler.h  Promise.h  Task.h
results/benchmark/: benchmark_results_16b.json  benchmark_results_2kb.json  benchmark_results_l_con.json
